--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -302,31 +302,12 @@
     padding-bottom: 50px;
 }
 
-.bg-half {
-    background-image: url(../img/bg-1.webp);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-    width: 100%;
-    height: 59.54%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -1;
-}
-
-.bg-half:before {
-    background-color: rgba(2, 2, 2, 0.7);
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
 .service-section .section-heading P {
     color: #ddd;
+}
+
+.service-bg {
+    height: 59.54%;
 }
 
 .service-item {
@@ -1152,10 +1133,6 @@
     transform: translateY(-3px);
 }
 .taxi-holder {
-    background-image: url(../img/taxi-background.webp);
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-size: contain;
     width: 100%;
     min-height: 550px;
     position: absolute;
@@ -1165,10 +1142,6 @@
 }
 
 .taxi-holder .taxi {
-    background-image: url(../img/taxi.webp);
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-size: contain;
     width: 650px;
     height: 100%;
     position: absolute;
@@ -1177,10 +1150,6 @@
 }
 
 .taxi-holder .mockup {
-    background-image: url(../img/mockup.webp);
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-size: contain;
     width: 350px;
     height: 100%;
     position: absolute;
@@ -1190,10 +1159,6 @@
 }
 
 .taxi-holder .charecter {
-    background-image: url(../img/charecter.webp);
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-size: contain;
     width: 180px;
     height: 100%;
     position: absolute;
